--- a/index.html
+++ b/index.html
@@ -32,6 +32,70 @@
                 <li><a class="contacts-link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
             </ul>
         </address>
+        <button type="button" class="open-menu-btn">
+            <svg width="18" height="16">
+                <use href="./images/icons.svg#icon-Group-1"></use>
+            </svg>
+        </button>
+    </div>
+    <!--------------Mobil menu modal -------------->
+    <div class="mob-modal">
+        <div class="mobile-menu-wrap">
+            <!----------button modal menu -->
+        <button type="button" class="mob-open-btn">
+            <svg class="icon-close-black" width="8" height="8">
+                <use href="./images/icons.svg#icon-close-black"></use>
+            </svg>
+        </button>
+        <!-- ---------nav menu -->
+        <nav class="mobile-menu">
+            <ul class="mobile-nav-list">
+                <li><a class="mob-menu-link" href="./index.html">Studio</a></li>
+                <li><a class="mob-menu-link" href="">Portfolio</a></li>
+                <li><a class="mob-menu-link" href="">Contacts</a></li>
+            </ul>
+        </nav>
+    </div>
+    <div>
+        <address class="mobile-contacts">
+            <ul class="mobile-contacts-list">
+                <li><a class="mob-contacts-link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+                <li><a class="mob-contacts-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            </ul>
+        </address>
+    </div>
+    <div class="mobile-social">
+        <ul class="mobile-icon-list">
+            <li class="icon-item">
+                <a href="" class="icon-link">
+                    <svg class="icon-icon" width="24" height="24">
+                        <use href="./images/icons.svg#icon-instagram-2"></use>
+                    </svg>
+                </a>
+            </li>
+            <li class="icon-item">
+                <a href="" class="icon-link">
+                    <svg class="icon-icon" width="24" height="24">
+                        <use href="./images/icons.svg#icon-twitter-1"></use>
+                    </svg>
+                </a>
+            </li>
+            <li class="icon-item">
+                <a href="" class="icon-link">
+                    <svg class="icon-icon" width="24" height="24">
+                        <use href="./images/icons.svg#icon-facebook-1"></use>
+                    </svg>
+                </a>
+            </li>
+            <li class="icon-item">
+                <a href="" class="icon-link">
+                    <svg class="icon-icon" width="24" height="24">
+                        <use href="./images/icons.svg#icon-linkedin-1"></use>
+                    </svg>
+                </a>
+            </li>
+        </ul>
+    </div>
     </div>
     </header>
     <!-- Main -->
@@ -43,7 +107,7 @@
             for Your Business</h1>
             <button class="button" type="button">Order Service</button>
             </div>
-        </section>
+        </section> 
         <!-- Section 1 -->
         <section class="section">
         <div class="container">
@@ -90,7 +154,7 @@
         </section>
         <!-- Section 2 -->
         <section class="our-team section">
-        <div class="container">
+        <div class="container our-team-wrap">
             <h2 class="title-two">Our Team</h2>
             <ul class="our-team-list">
                 <li class="our-team-item">
@@ -344,7 +408,7 @@
             <a class="logo footer-logo" href="./index.html">Web<span class="logo-studio-footer">Studio</span></a>
             <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
             </div>        
-            <div class="social">
+            <div class="social ">
             <p class="social-name">Social media</p>
             <ul class="icon-list">
                 <li class="icon-item">
@@ -377,7 +441,7 @@
                 </li>
             </ul>
             </div>
-            <div class="footer-subscribe-wrap">
+            <div class="footer-subscribe-wrap ">
                 <p class="social-name">Subscribe</p>
                 <form class="footer-subscribe">
                 <label class="footer-lbel">
@@ -447,7 +511,7 @@
                 </div>
                 <button type="submit" class="button check-button">Send</button>
             </form>
-        </div>
-    </div>
+        </div> 
+    </div> 
 </body>
 </html>
