--- a/index.html
+++ b/index.html
@@ -505,8 +505,10 @@
                         <svg class="icon-check" width="10" height="8">
                         <use href="./images/icons.svg#icon-Vector-1"></use>
                     </svg>
-                    </span> I accept the terms and conditions of the 
-                    <a href="" class="check-text-pp"> Privacy Policy</a>
+                    </span>
+                    <span>
+                    I accept the terms and conditions of the 
+                    <a href="" class="check-text-pp"> Privacy Policy</a></span>
                     </label>
                 </div>
                 <button type="submit" class="button check-button">Send</button>
