--- a/index.html
+++ b/index.html
@@ -158,7 +158,12 @@
             <h2 class="title-two">Our Team</h2>
             <ul class="our-team-list">
                 <li class="our-team-item">
-                    <img class="our-team-image" src="./images/imgMarkGuerrero.jpg" alt="Product Designer" width="264" height="260">
+                    <img  
+                    srcset="./images/imgMarkGuerrero.jpg 1x,
+                    ./images/imgdesktop-mark-2x-min.jpg 2x"
+                    src="./images/imgMarkGuerrero.jpg" 
+                    alt="Product Designer" width="264" height="260"
+                    class="our-team-image">
                     <div class="card-content-team">
                         <h3 class="our-team-title">Mark Guerrero</h3>
                         <p class="our-team-text">Product Designer</p>
@@ -195,7 +200,12 @@
                     </div>
                 </li>
                 <li class="our-team-item">
-                    <img class="our-team-image" src="./images/imgTomFord.jpg" alt="Frontend Developer" width="264" height="260">
+                    <img  
+                    srcset="./images/imgTomFord.jpg 1x,
+                    images/imgdesktop-tom-2x-min.jpg 2x"
+                    src="./images/imgTomFord.jpg" alt="Frontend Developer" 
+                    width="264" height="260"
+                    class="our-team-image">
                     <div class="card-content-team">
                         <h3 class="our-team-title">Tom Ford</h3>
                         <p class="our-team-text">Frontend Developer</p>
@@ -232,7 +242,11 @@
                     </div>
                 </li>
                 <li class="our-team-item">
-                    <img class="our-team-image" src="./images/imgCamilaGarcia.jpg" alt="Marketing" width="264" height="260">
+                    <img 
+                    srcset="./images/imgCamilaGarcia.jpg 1x,
+                    ./images/imgdesktop-camila-2x-min.jpg"
+                    class="our-team-image" 
+                    src="./images/imgCamilaGarcia.jpg" alt="Marketing" width="264" height="260">
                     <div class="card-content-team">
                         <h3 class="our-team-title">Camila Garcia</h3>
                         <p class="our-team-text">Marketing</p>
@@ -269,7 +283,11 @@
                     </div>
                 </li>
                 <li class="our-team-item">
-                    <img class="our-team-image" src="./images/imgDanielWilson.jpg" alt="UI Designer" width="264" height="260">
+                    <img srcset="./images/imgDanielWilson.jpg 1x,
+                    ./images/images/imgdesktop-daniel-2x-min.jpg"
+                    class="our-team-image" 
+                    src="./images/imgDanielWilson.jpg" 
+                    alt="UI Designer" width="264" height="260">
                     <div class="card-content-team">
                         <h3 class="our-team-title">Daniel Wilson</h3>
                         <p class="our-team-text">UI Designer</p>
