--- a/index.html
+++ b/index.html
@@ -335,16 +335,16 @@
                 <li class="portfolio-item">
                     <div class="portfolio-cover-wrap">
                     <picture>
+                        <source srcset="./images/imgBankingApp.jpg 1x, 
+                        ./images/desctop/imgdesktop-port1-2x-min.jpg 2x" 
+                        media="(min-width: 1158px)">
+                        <source srcset="./images/tablet/imgtablet-port1-1x-min.jpg 1x, 
+                        ./images/tablet/imgtablet-port1-2x-min.jpg 2x" 
+                        media="(min-width: 768px) and (max-width: 1157px)">
                         <source 
                         srcset="./images/mobile/imgmobBankingApp1x-min.jpg 1x, 
                         ./images/mobile/imgmobBankingApp2x-min.jpg 2x" 
                         media="(max-width: 767px)">
-                        <source srcset="./images/tablet/imgtablet-port1-1x-min.jpg 1x, 
-                        ./images/tablet/imgtablet-port1-2x-min.jpg 2x" 
-                        media="(min-width: 768px) and (max-width: 1157px)">
-                        <source srcset="./images/imgBankingApp.jpg 1x, 
-                        ./images/desctop/imgdesktop-port1-2x-min.jpg 2x" 
-                        media="(min-width: 1158px)">
                         <img class="portfolio-image" 
                         src="./images/imgBankingApp.jpg" 
                         alt="Banking" 
@@ -365,17 +365,17 @@
                     <div class="portfolio-cover-wrap">
                 <picture>
                     <source 
-                    srcset="./images/mobile/imgmobCashlessPayment1x-min.jpg 1x, 
-                            ./images/mobile/imgmobCashlessPayment2x-min.jpg 2x" 
-                    media="(max-width: 767px)">
+                    srcset="./images/imgCashlessPayment.jpg 1x, 
+                            ./images/desctop/imgdesktop-port2-2x-min.jpg 2x" 
+                    media="(min-width: 1158px)">
                     <source 
                     srcset="./images/tablet/imgtablet-port2-1x-min.jpg 1x, 
                             ./images/tablet/imgtablet-port2-2x-min.jpg 2x"
                     media="(min-width: 768px) and (max-width: 1157px)">
                     <source 
-                    srcset="./images/imgCashlessPayment.jpg 1x, 
-                            ./images/desctop/imgdesktop-port2-2x-min.jpg 2x" 
-                    media="(min-width: 1158px)">
+                    srcset="./images/mobile/imgmobCashlessPayment1x-min.jpg 1x, 
+                            ./images/mobile/imgmobCashlessPayment2x-min.jpg 2x" 
+                    media="(max-width: 767px)">
                     <img class="portfolio-image" src="./images/imgCashlessPayment.jpg" alt="Cashless" width="360" height="300">
                 </picture>
                     <p class="portfolio-cover-text">
@@ -392,17 +392,17 @@
                     <div class="portfolio-cover-wrap">
                     <picture>
                         <source 
-                        srcset="./images/mobile/imgmobMeditationApp1x-min.jpg 1x, 
-                                ./images/mobile/imgmobMeditationApp2x-min.jpg 2x" 
-                        media="(max-width: 767px)">
+                        srcset="./images/imgMeditationApp.jpg 1x, 
+                                ./images/desctop/imgdesktop-port3-2x-min.jpg 2x" 
+                        media="(min-width: 1158px)">
                         <source 
                         srcset="./images/tablet/imgtablet-port3-1x-min.jpg 1x, 
                                 ./images/tablet/imgtablet-port3-2x-min.jpg 2x"
                         media="(min-width: 768px) and (max-width: 1157px)">
                         <source 
-                        srcset="./images/imgMeditationApp.jpg 1x, 
-                                ./images/desctop/imgdesktop-port3-2x-min.jpg 2x" 
-                        media="(min-width: 1158px)">
+                        srcset="./images/mobile/imgmobMeditationApp1x-min.jpg 1x, 
+                                ./images/mobile/imgmobMeditationApp2x-min.jpg 2x" 
+                        media="(max-width: 767px)">
                         <img class="portfolio-image" src="./images/imgMeditationApp.jpg" alt="Meditation" width="360" height="300">
                     </picture>
                     <p class="portfolio-cover-text">
@@ -421,17 +421,17 @@
                     <div class="portfolio-cover-wrap">
                     <picture>
                         <source 
-                        srcset="./images/mobile/imgmobTaxiService1x-min.jpg 1x, 
-                                ./images/mobile/imgmobTaxiService2x-min.jpg 2x" 
-                        media="(max-width: 767px)">
+                        srcset="./images/imgTaxiService.jpg 1x, 
+                                ./images/desctop/imgdesktop-port4-2x-min.jpg 2x" 
+                        media="(min-width: 1158px)">
                         <source 
                         srcset="./images/tablet/imgtablet-port4-1x-min.jpg 1x, 
                                 ./images/tablet/imgtablet-port4-2x-min.jpg 2x"
                         media="(min-width: 768px) and (max-width: 1157px)">
                         <source 
-                        srcset="./images/imgTaxiService.jpg 1x, 
-                                ./images/desctop/imgdesktop-port4-2x-min.jpg 2x" 
-                        media="(min-width: 1158px)">
+                        srcset="./images/mobile/imgmobTaxiService1x-min.jpg 1x, 
+                                ./images/mobile/imgmobTaxiService2x-min.jpg 2x" 
+                        media="(max-width: 767px)">
                         <img class="portfolio-image" src="./images/imgTaxiService.jpg" alt="Taxi" width="360"  height="300">
                     </picture>
                     <p class="portfolio-cover-text">
@@ -449,20 +449,19 @@
                     <div class="portfolio-cover-wrap">
                     <picture>
                         <source 
-                        srcset="./images/mobile/imgmobScreenIllustrations1x-min.jpg 1x, 
-                                ./images/mobile/imgmobScreenIllustrations2x-min.jpg 2x" 
-                        media="(max-width: 767px)">
+                        srcset="./images/imgScreenIllustrations.jpg 1x, 
+                                ./images/desctop/imgdesktop-port5-2x-min.jpg 2x" 
+                        media="(min-width: 1158px)">
                         <source 
                         srcset="./images/tablet/imgtablet-port5-1x-min.jpg 1x, 
                                 ./images/tablet/imgtablet-port5-2x-min.jpg 2x"
                         media="(min-width: 768px) and (max-width: 1157px)">
                         <source 
-                        srcset="./images/imgScreenIllustrations.jpg 1x, 
-                                ./images/desctop/imgdesktop-port5-2x-min.jpg 2x" 
-                        media="(min-width: 1158px)">
+                        srcset="./images/mobile/imgmobScreenIllustrations1x-min.jpg 1x, 
+                                ./images/mobile/imgmobScreenIllustrations2x-min.jpg 2x" 
+                        media="(max-width: 767px)">
                         <img class="portfolio-image" src="./images/imgScreenIllustrations.jpg" alt="Screen" width="360" height="300">
                     </picture>
-                    
                     <p class="portfolio-cover-text">
                         14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
                         App ·
@@ -476,21 +475,21 @@
                 </li>
                 <li class="portfolio-item">
                     <div class="portfolio-cover-wrap">
+                    <picture>
                     <source 
-                    srcset="./images/mobile/imgmobOnlineCourses1x-min.jpg 1x, 
-                            ./images/mobile/imgmobOnlineCourses2x-min.jpg 2x" 
-                    media="(max-width: 767px)">
+                    srcset="./images/imgOnlineCourses.jpg.jpg 1x, 
+                            ./images/desctop/imgdesktop-port6-2x-min.jpg 2x" 
+                    media="(min-width: 1158px)">
                     <source 
                     srcset="./images/tablet/imgtablet-port6-1x-min.jpg 1x, 
                             ./images/tablet/imgtablet-port6-2x-min.jpg 2x"
                     media="(min-width: 768px) and (max-width: 1157px)">
                     <source 
-                    srcset="./images/imgOnlineCourses.jpg.jpg 1x, 
-                            ./images/desctop/imgdesktop-port6-2x-min.jpg 2x" 
-                    media="(min-width: 1158px)">
+                    srcset="./images/mobile/imgmobOnlineCourses1x-min.jpg 1x, 
+                            ./images/mobile/imgmobOnlineCourses2x-min.jpg 2x" 
+                    media="(max-width: 767px)">
                     <img class="portfolio-image" src="./images/imgOnlineCourses.jpg" alt="Courses" width="360" height="300">
                     </picture>
-                    
                     <p class="portfolio-cover-text">
                         14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
                         App ·
