--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
                 <li class="our-team-item">
                     <img 
                     srcset="./images/imgCamilaGarcia.jpg 1x,
-                    ./images/imgdesktop-camila-2x-min.jpg"
+                    ./images/imgdesktop-camila-2x-min.jpg 2x"
                     class="our-team-image" 
                     src="./images/imgCamilaGarcia.jpg" alt="Marketing" width="264" height="260">
                     <div class="card-content-team">
