--- a/index.html
+++ b/index.html
@@ -477,7 +477,7 @@
                     <div class="portfolio-cover-wrap">
                     <picture>
                     <source 
-                    srcset="./images/imgOnlineCourses.jpg.jpg 1x, 
+                    srcset="./images/imgOnlineCourses.jpg 1x, 
                             ./images/desctop/imgdesktop-port6-2x-min.jpg 2x" 
                     media="(min-width: 1158px)">
                     <source 
