--- a/index.html
+++ b/index.html
@@ -50,20 +50,18 @@
         <!-- ---------nav menu -->
         <nav class="mobile-menu">
             <ul class="mobile-nav-list">
-                <li><a class="mob-menu-link" href="./index.html">Studio</a></li>
+                <li><a class="mob-menu-link active" href="./index.html">Studio</a></li>
                 <li><a class="mob-menu-link" href="">Portfolio</a></li>
                 <li><a class="mob-menu-link" href="">Contacts</a></li>
             </ul>
         </nav>
     </div>
-    <div>
         <address class="mobile-contacts">
             <ul class="mobile-contacts-list">
                 <li><a class="mob-contacts-link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
                 <li><a class="mob-contacts-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
             </ul>
         </address>
-    </div>
     <div class="mobile-social">
         <ul class="mobile-icon-list">
             <li class="icon-item">
