--- a/index.html
+++ b/index.html
@@ -333,18 +333,20 @@
                 <li class="portfolio-item">
                     <div class="portfolio-cover-wrap">
                     <picture>
-                        <source srcset="./images/imgBankingApp.jpg 1x, 
-                        ./images/desctop/imgdesktop-port1-2x-min.jpg 2x" 
+                        <source 
+                        srcset="./images/desktop-port1-1x.jpg 1x, 
+                                ./images/desktop-port1-2x.jpg 2x" 
                         media="(min-width: 1158px)">
-                        <source srcset="./images/tablet/imgtablet-port1-1x-min.jpg 1x, 
-                        ./images/tablet/imgtablet-port1-2x-min.jpg 2x" 
+                        <source 
+                        srcset="./images/tablet/imgtablet-port1-1x-min.jpg 1x, 
+                                ./images/tablet/imgtablet-port1-2x-min.jpg 2x" 
                         media="(min-width: 768px) and (max-width: 1157px)">
                         <source 
-                        srcset="./images/mobile/imgmobBankingApp1x-min.jpg 1x, 
-                        ./images/mobile/imgmobBankingApp2x-min.jpg 2x" 
+                        srcset="./images/mobile/mobile-port1-1x.jpg 1x, 
+                                ./images/mobile/mobile-port1-2x.jpg 2x" 
                         media="(max-width: 767px)">
                         <img class="portfolio-image" 
-                        src="./images/imgBankingApp.jpg" 
+                        src="./images/desktop-port1-1x.jpg" 
                         alt="Banking" 
                         width="360" height="300">
                     </picture>
@@ -363,18 +365,21 @@
                     <div class="portfolio-cover-wrap">
                 <picture>
                     <source 
-                    srcset="./images/imgCashlessPayment.jpg 1x, 
-                            ./images/desctop/imgdesktop-port2-2x-min.jpg 2x" 
+                    srcset="./images/desktop-port2-1x.jpg 1x, 
+                            ./images/desktop-port2-2x.jpg 2x" 
                     media="(min-width: 1158px)">
                     <source 
                     srcset="./images/tablet/imgtablet-port2-1x-min.jpg 1x, 
                             ./images/tablet/imgtablet-port2-2x-min.jpg 2x"
                     media="(min-width: 768px) and (max-width: 1157px)">
                     <source 
-                    srcset="./images/mobile/imgmobCashlessPayment1x-min.jpg 1x, 
-                            ./images/mobile/imgmobCashlessPayment2x-min.jpg 2x" 
+                    srcset="./images/mobile/mobile-port2-1x.jpg 1x, 
+                            ./images/mobile/mobile-port2-2x.jpg 2x" 
                     media="(max-width: 767px)">
-                    <img class="portfolio-image" src="./images/imgCashlessPayment.jpg" alt="Cashless" width="360" height="300">
+                    <img class="portfolio-image" 
+                    src="./images/desktop-port2-1x.jpg" 
+                    alt="Cashless" 
+                    width="360" height="300">
                 </picture>
                     <p class="portfolio-cover-text">
                         14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
@@ -390,18 +395,21 @@
                     <div class="portfolio-cover-wrap">
                     <picture>
                         <source 
-                        srcset="./images/imgMeditationApp.jpg 1x, 
-                                ./images/desctop/imgdesktop-port3-2x-min.jpg 2x" 
+                        srcset="./images/desktop-port3-1x.jpg 1x, 
+                                ./images/desktop-port3-2x.jpg 2x" 
                         media="(min-width: 1158px)">
                         <source 
                         srcset="./images/tablet/imgtablet-port3-1x-min.jpg 1x, 
                                 ./images/tablet/imgtablet-port3-2x-min.jpg 2x"
                         media="(min-width: 768px) and (max-width: 1157px)">
                         <source 
-                        srcset="./images/mobile/imgmobMeditationApp1x-min.jpg 1x, 
-                                ./images/mobile/imgmobMeditationApp2x-min.jpg 2x" 
+                        srcset="./images/mobile/mobile-port3-1x.jpg 1x, 
+                                ./images/mobile/mobile-port3-2x.jpg 2x" 
                         media="(max-width: 767px)">
-                        <img class="portfolio-image" src="./images/imgMeditationApp.jpg" alt="Meditation" width="360" height="300">
+                        <img class="portfolio-image" 
+                        src="./images/desktop-port3-1x.jpg" 
+                        alt="Meditation" 
+                        width="360" height="300">
                     </picture>
                     <p class="portfolio-cover-text">
                         14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
@@ -419,18 +427,20 @@
                     <div class="portfolio-cover-wrap">
                     <picture>
                         <source 
-                        srcset="./images/imgTaxiService.jpg 1x, 
-                                ./images/desctop/imgdesktop-port4-2x-min.jpg 2x" 
+                        srcset="./images/desktop-port4-1x.jpg 1x, 
+                                ./images/desktop-port4-2x.jpg 2x" 
                         media="(min-width: 1158px)">
                         <source 
                         srcset="./images/tablet/imgtablet-port4-1x-min.jpg 1x, 
                                 ./images/tablet/imgtablet-port4-2x-min.jpg 2x"
                         media="(min-width: 768px) and (max-width: 1157px)">
                         <source 
-                        srcset="./images/mobile/imgmobTaxiService1x-min.jpg 1x, 
-                                ./images/mobile/imgmobTaxiService2x-min.jpg 2x" 
+                        srcset="./images/mobile/mobile-port4-1x.jpg 1x, 
+                                ./images/mobile/mobile-port4-2x.jpg 2x" 
                         media="(max-width: 767px)">
-                        <img class="portfolio-image" src="./images/imgTaxiService.jpg" alt="Taxi" width="360"  height="300">
+                        <img class="portfolio-image" 
+                        src="./images/desktop-port4-1x.jpg" 
+                        alt="Taxi" width="360"  height="300">
                     </picture>
                     <p class="portfolio-cover-text">
                         14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
@@ -447,18 +457,20 @@
                     <div class="portfolio-cover-wrap">
                     <picture>
                         <source 
-                        srcset="./images/imgScreenIllustrations.jpg 1x, 
-                                ./images/desctop/imgdesktop-port5-2x-min.jpg 2x" 
+                        srcset="./images/desktop-port5-1x.jpg 1x, 
+                                ./images/desktop-port5-2x.jpg 2x" 
                         media="(min-width: 1158px)">
                         <source 
                         srcset="./images/tablet/imgtablet-port5-1x-min.jpg 1x, 
                                 ./images/tablet/imgtablet-port5-2x-min.jpg 2x"
                         media="(min-width: 768px) and (max-width: 1157px)">
                         <source 
-                        srcset="./images/mobile/imgmobScreenIllustrations1x-min.jpg 1x, 
-                                ./images/mobile/imgmobScreenIllustrations2x-min.jpg 2x" 
+                        srcset="./images/mobile/mobile-port5-1x.jpg 1x, 
+                                ./images/mobile/mobile-port5-2x.jpg 2x" 
                         media="(max-width: 767px)">
-                        <img class="portfolio-image" src="./images/imgScreenIllustrations.jpg" alt="Screen" width="360" height="300">
+                        <img class="portfolio-image" 
+                        src="./images/desktop-port5-1x.jpg" 
+                        alt="Screen" width="360" height="300">
                     </picture>
                     <p class="portfolio-cover-text">
                         14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
@@ -475,18 +487,20 @@
                     <div class="portfolio-cover-wrap">
                     <picture>
                     <source 
-                    srcset="./images/imgOnlineCourses.jpg 1x, 
-                            ./images/desctop/imgdesktop-port6-2x-min.jpg 2x" 
+                    srcset="./images/desktop-port6-1x.jpg 1x, 
+                            ./images/desktop-port6-2x.jpg 2x" 
                     media="(min-width: 1158px)">
                     <source 
                     srcset="./images/tablet/imgtablet-port6-1x-min.jpg 1x, 
                             ./images/tablet/imgtablet-port6-2x-min.jpg 2x"
                     media="(min-width: 768px) and (max-width: 1157px)">
                     <source 
-                    srcset="./images/mobile/imgmobOnlineCourses1x-min.jpg 1x, 
-                            ./images/mobile/imgmobOnlineCourses2x-min.jpg 2x" 
+                    srcset="./images/mobile/mobile-port6-1x.jpg 1x, 
+                            ./images/mobile/mobile-port6-2x.jpg 2x" 
                     media="(max-width: 767px)">
-                    <img class="portfolio-image" src="./images/imgOnlineCourses.jpg" alt="Courses" width="360" height="300">
+                    <img class="portfolio-image" 
+                    src="./images/desktop-port6-1x.jpg" 
+                    alt="Courses" width="360" height="300">
                     </picture>
                     <p class="portfolio-cover-text">
                         14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
